--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 <script>
   // Your web app's Firebase configuration
   const firebaseConfig = {
-  apiKey: "AIzaSyBUMVe9P-3_s4zkc1ZLpgPJj_FPg8Ix6vo",
-  authDomain: "jungle-race-d480f.firebaseapp.com",
-  projectId: "jungle-race-d480f",
-  storageBucket: "jungle-race-d480f.appspot.com",
-  messagingSenderId: "533990423126",
-  appId: "1:533990423126:web:02b8e3331fd446b7f499f7"
+  apiKey: "AIzaSyDEEFDiy6ZnCvNKVYWMgcwRX2pID22YQiw",
+  authDomain: "jungle-race-d0e4d.firebaseapp.com",
+  projectId: "jungle-race-d0e4d",
+  storageBucket: "jungle-race-d0e4d.appspot.com",
+  messagingSenderId: "508740632711",
+  appId: "1:508740632711:web:6e67b7f2c3335690b97822"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
